--- a/common.css
+++ b/common.css
@@ -100,3 +100,70 @@ button:active {
   color: red; /* 高亮颜色 */
   font-weight: bold; /* 加粗 */
 }
+
+.img-slide-section {
+  width: 100%;
+  height: 200vh;
+  position: relative;
+}
+.img-slide-layout {
+  width: 1280px;
+  height: 100vh;
+  max-height: 100vh;
+  margin: 0 auto;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.img-slide-wrapper {
+  width: 800px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+.img-box {
+  position: absolute;
+  top: 0;
+  left: 0;
+  /* right: 0; */
+  /* bottom: 0; */
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+ }
+.img-slide-wrapper img {
+  width: 800px;
+  box-shadow: 0px 2px 13px 0px rgba(0, 0, 0, 0.29);
+  /* width: 100%; */
+}
+.video-section {
+  width: 100%;
+  height: 150vh;
+}
+.video-layout {
+  width: 1280px;
+  height: 100vh;
+  max-height: 100vh;
+  position: relative;
+  margin: 0 auto;
+}
+.video-wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  padding: 5% 0;
+  box-sizing: border-box;
+}
+.video-box {
+  /* height: 60vh */
+}
+.video-wrapper video {
+  width: 90vw;
+  max-width: 1000px;
+}
