feat: 抽奖区域样式修改

--- a/css/bottom.less
+++ b/css/bottom.less
@@ -1,16 +1,20 @@
 .page {
   width: auto;
   height: auto;
+
   .box_17 {
     position: relative;
-    > * {
+
+    >* {
       cursor: pointer;
     }
   }
+
   .text-wrapper_95 {
     position: relative;
     top: -2.8vw;
   }
+
   input.text-input {
     width: 100%;
     height: 100%;
@@ -29,9 +33,11 @@
       opacity: 1;
     }
   }
+
   .text-wrapper_29 {
     cursor: pointer;
   }
+
   .text_119 {
     text-align: center;
     height: auto;
@@ -41,6 +47,7 @@
     padding: 2vw 0.8vw;
     width: auto;
   }
+
   .text-wrapper_30 {
     display: flex;
     align-items: center;
@@ -48,12 +55,15 @@
     border-radius: 4vw;
     transform: rotate(30deg);
   }
+
   .text_105 {
     text-align: center;
     font-weight: bold;
   }
+
   .text-wrapper_92 {
     left: 4.06vw;
+
     .card_content {
       padding-top: 1vw;
       width: 46.58vw;
@@ -65,12 +75,14 @@
       text-align: left;
       font-style: normal;
       opacity: 0.9;
-      > span {
+
+      >span {
         color: #000;
         background-color: #cde681;
       }
     }
   }
+
   .image_64 {
     width: 10.42vw;
     height: 1.41vw;
@@ -133,6 +145,7 @@
       background-size: 100%;
     }
   }
+
   .group_39::-webkit-scrollbar {
     width: 6px;
   }
@@ -181,12 +194,14 @@
     height: 100%;
     backface-visibility: hidden;
     transition: transform 0.8s;
-    background-size: cover; /* 确保背景图片覆盖整个元素 */
+    background-size: cover;
+    /* 确保背景图片覆盖整个元素 */
   }
 
-  .group_104{
+  .group_104 {
     margin-top: 0;
   }
+
   .box_91 {
     margin-top: 0;
     transform: rotateY(180deg);
@@ -199,6 +214,7 @@
   .card-container.flipped .box_91 {
     transform: rotateY(0deg);
   }
+
   .image-text_38 {
     margin: 0;
     align-items: center;
@@ -207,15 +223,94 @@
     height: 100%;
     cursor: pointer;
   }
+
   .text_52 {
     height: auto;
   }
+
   .text_53 {
     width: auto;
     text-decoration: underline;
     cursor: pointer;
   }
+
   .text_54 {
     width: auto;
+  }
+
+  .block_15 {
+    height: 100vh;
+    display: flex;
+    align-items: flex-start;
+    .group_17 {
+      overflow-y: scroll;
+      height: 100%;
+    }
+    .block_60 {
+      .group_16  {
+        background-color: #A7F387;
+        .text-wrapper_18 {
+          background-color: #36DD51;
+        }
+      }
+      .text-wrapper_86 {
+        color: rgba(0, 0, 0, 0.4);
+        opacity: 0.4;
+      }
+    }
+    .text_318, .text_319, .text_320 {
+      text-align: center;
+      font-family: D-DINExp, D-DINExp;;
+      font-weight: bold;
+    }
+    .text_336, .text_337, .text_338,
+    .text_346, .text_347, .text_348 {
+      font-family: D-DINExp, D-DINExp;;
+      font-weight: bold;
+    }
+    .text_320, .text_338, .text_348 {
+      font-weight: normal;
+    }
+    .text_321 {
+      width: 20.83vw;
+      height: 1.35vw;
+      font-family: D-DINExp, D-DINExp;
+      font-weight: bold;
+      font-size: 0.78vw;
+      color: #000000;
+      line-height: 1.35vw;
+      font-style: normal;
+    }
+    .text_322 {
+      width: 20.83vw;
+      height: 1.46vw;
+      font-family: D-DINExp, D-DINExp;
+      font-weight: bold;
+      font-size: 1.35vw;
+      color: #000000;
+      line-height: 1.46vw;
+      font-style: normal;
+    }
+    .paragraph_32 { 
+      width: 20.83vw;
+      height: 3.13vw;
+      font-family: D, D;
+      font-weight: normal;
+      font-size: 0.78vw;
+      color: #000000;
+      line-height: 1.04vw;
+      font-style: normal;
+    }
+    .box_84, .text-wrapper_91, .text-wrapper_89 {
+      cursor: pointer;
+    }
+    
+  }
+  .fontRepair {
+    text-align: center;
+    font-family: D-DINExp, D-DINExp;;
+  }
+  .fontBold {
+    font-weight: bold;
   }
 }
