feat: 上部样式调整

--- a/css/bottom.less
+++ b/css/bottom.less
@@ -314,4 +314,59 @@
   .fontBold {
     font-weight: bold;
   }
+  .paragraph_31 {
+    font-family: D-DINCondensed, D-DINCondensed;
+    font-weight: bold;
+    text-align: center;
+  }
+  .section_22 {
+    width: 100vw;
+    height: 52.94vw;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    margin-left: 0;
+  }
+  .pin-spacer {
+    margin-top: 4vw !important;
+    .text_43 {
+      text-align: center;
+    }
+    .video-box {
+      margin-top: -1.5vw
+    }
+    .video-wrapper video {
+      max-width: 88.5vw;
+    }
+    .img-slide-wrapper{
+      width: 66.67vw;
+    }
+    .img-slide-wrapper img {
+      width: 66.67vw;
+    }
+  }
+  .block_49 {
+    .text_22 {
+      width: 32.29vw;
+      height: 4.43vw;
+      font-family: D-DINCondensed, D-DINCondensed;
+      font-size: 5.21vw;
+      color: transparent;
+      line-height: 4.43vw;
+      text-align: left;
+      font-style: normal;
+      text-transform: uppercase;
+      -webkit-text-stroke: 0.05vw #000000;
+    }
+    .rotate {
+      transform: rotate(7deg);
+      position: relative;
+      top: 1.5vw;
+    }
+    .text_299 {
+      width: auto;
+    }
+    .text_28 {
+      width: auto;
+    }
+  }
 }
