--- a/css/bottom.less
+++ b/css/bottom.less
@@ -24,8 +24,8 @@
     font-family: inherit;
     font-size: inherit;
     color: inherit;
-    text-align: center;
-    padding: 0;
+    text-align: left;
+    padding: 0 1vw;
     margin: 0;
 
     &::placeholder {
@@ -367,6 +367,14 @@
     }
     .text_28 {
       width: auto;
+    }
+  }
+  .box_26 {
+    .text-wrapper_31 {
+      width: 52vw;
+    }
+    .paragraph_14, .paragraph_15 {
+      line-height: 0.78vw;
     }
   }
 }
