feat: 样式调整，图片替换

--- a/css/bottom.less
+++ b/css/bottom.less
@@ -42,10 +42,10 @@
     text-align: center;
     height: auto;
     margin: 0;
-    border: 1px dashed #000;
     border-radius: 4vw;
     padding: 2vw 0.8vw;
     width: auto;
+    transform: rotate(21.5deg);
   }
 
   .text-wrapper_30 {
@@ -53,7 +53,12 @@
     align-items: center;
     justify-content: center;
     border-radius: 4vw;
-    transform: rotate(30deg);
+    background: url('../image/9-12@2x.png');
+    background-size: 100% 100%;
+    height: 10.94vw;
+    width: 13.13vw;
+    left: 32.49vw;
+    top: 24.73vw;
   }
 
   .text_105 {
