--- a/css/modal.less
+++ b/css/modal.less
@@ -61,6 +61,10 @@
     opacity: 0;
     transition: all 0.3s ease-in-out;
     display: none;
+    > img {
+      width: 20vw;
+      height: 23.44vw;
+    }
     &.show {
       opacity: 1;
       transition: all 0.3s ease-in-out;
