--- a/index.css
+++ b/index.css
@@ -191,9 +191,10 @@
 }
 
 .box_2 {
-  background-image: url(https://lanhu-dds-backend.oss-cn-beijing.aliyuncs.com/merge_image/imgs/6134a573792e43939dad52cfac6881b4_mergeImage.png);
+  background-image: url('image/bg1.webp');
   background-position: center;
   background-repeat: no-repeat;
+  background-size: 100% 100%;
   width: 100vw;
   height: auto;
 }
@@ -761,7 +762,7 @@
   height: 1.2vw;
   /* margin: 0.83vw 0 0 48.64vw; */
   position: absolute;
-  bottom: 60px;
+  bottom: -6vw;
 }
 
 .text_32 {
