--- a/css/modal.css
+++ b/css/modal.css
@@ -37,13 +37,6 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  opacity: 0;
-  transition: all 0.3s ease-in-out;
-}
-.modal .text-wrapper_1.show {
-  opacity: 1;
-  transform: translate(-50%, -50%);
-  transition: all 0.3s ease-in-out;
 }
 @keyframes modalFadeIn {
   from {
@@ -63,6 +56,136 @@
     opacity: 1;
   }
 }
+.modal .content {
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
+  display: none;
+}
+.modal .content > img {
+  width: 20vw;
+  height: 23.44vw;
+}
+.modal .content.show {
+  opacity: 1;
+  transition: all 0.3s ease-in-out;
+}
+.modal .content .title {
+  width: 18.23vw;
+  font-family: D-DINExp, D-DINExp;
+  font-weight: bold;
+  font-size: 1.88vw;
+  color: #000000;
+  line-height: 2.08vw;
+  text-align: left;
+  font-style: normal;
+}
+.modal .content .describe {
+  width: 18.23vw;
+  font-family: D, D;
+  font-weight: normal;
+  font-size: 0.78vw;
+  color: #000000;
+  line-height: 1.09vw;
+  text-align: left;
+  font-style: normal;
+  margin: 0.63vw 0 2.29vw;
+}
+.modal .activity {
+  align-items: center;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 4.43vw;
+}
+.modal .rewards > img {
+  width: 20vw;
+  height: 23.44vw;
+}
+.modal .rewards .drawBtn {
+  cursor: pointer;
+  background-color: #36DD51;
+  width: 18.23vw;
+  height: 2.6vw;
+  line-height: 2.6vw;
+  text-align: center;
+}
+.modal .rewards .drawBtn:hover {
+  opacity: 0.9;
+}
+.modal .discountCode .discountCodeInfo {
+  width: 17.81vw;
+  height: 3.65vw;
+  background: #000000;
+  border: 0.05vw solid #000000;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+.modal .discountCode .discountCodeInfo img {
+  cursor: pointer;
+}
+.modal .discountCode .discountCodeInfo .discountCodeText {
+  font-family: D-DINExp, D-DINExp;
+  font-weight: bold;
+  font-size: 1.15vw;
+  color: #FFFFFF;
+  line-height: 1.35vw;
+  font-style: normal;
+}
+.modal .discountCode .discountCodeInfo .discountCodeDescribe {
+  font-family: D, D;
+  font-weight: normal;
+  font-size: 0.63vw;
+  color: #03FE00;
+  line-height: 0.83vw;
+  font-style: normal;
+}
+.modal .discountCode .shopNow {
+  margin-top: 0.63vw;
+  width: 17.81vw;
+  height: 2.6vw;
+  background: #FFFFFF;
+  font-size: 0.78vw;
+  border: 0.05vw solid #000000;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.modal .drone1 .input-group {
+  display: flex;
+  align-items: center;
+}
+.modal .drone1 .email-input {
+  flex: 1;
+  width: 13.33vw;
+  height: 2.6vw;
+  background: #FFFFFF;
+  border: 0.05vw solid #000000;
+  font-size: 0.78vw;
+  padding: 0 0.63vw;
+}
+.modal .drone1 .confirm-btn {
+  width: 4.9vw;
+  height: 2.6vw;
+  background: #000000;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  font-size: 0.78vw;
+}
+.modal .drone1 .confirm-btn:hover {
+  opacity: 0.9;
+}
+.modal .drone1 .tip {
+  font-family: D, D;
+  font-weight: normal;
+  font-size: 0.78vw;
+  color: #00B000;
+  line-height: 1.09vw;
+  font-style: normal;
+  margin-top: 0.63vw;
+}
 .modal .rule .text_1 {
   width: 13.44vw;
   height: 1.05vw;
@@ -79,7 +202,7 @@
 }
 .modal .rule .paragraph_1 {
   width: 40.63vw;
-  height: 12.5vw;
+  height: 22.5vw;
   overflow-wrap: break-word;
   font-size: 0.78vw;
   line-height: 1.04vw;
@@ -89,4 +212,5 @@
   color: #000000;
   text-align: left;
   font-style: normal;
+  overflow-y: scroll;
 }
