--- a/css/modal.less
+++ b/css/modal.less
@@ -104,6 +104,14 @@
     }
     .drawBtn {
       cursor: pointer;
+      background-color: #36DD51;
+      width: 18.23vw;
+      height: 2.6vw;
+      line-height: 2.6vw;
+      text-align: center;
+    }
+    .drawBtn:hover {
+      opacity: 0.9;
     }
   }
   .discountCode {
@@ -206,7 +214,7 @@
     
     .paragraph_1 {
       width: 40.63vw;
-      height: 12.5vw;
+      height: 22.5vw;
       overflow-wrap: break-word;
       color: rgba(0, 0, 0, 1);
       font-size: 0.78vw;
@@ -217,6 +225,7 @@
       color: #000000;
       text-align: left;
       font-style: normal;
+      overflow-y: scroll
     }
   }
 }
