--- a/css/bottom.less
+++ b/css/bottom.less
@@ -380,34 +380,38 @@
         box-shadow: 0px 2px 16px 0px rgba(0,0,0,0.29);
         background: #fff;
         padding: 40px 20px;
-        height: 592px;
+        height: 47.71vw;
+        width: 66.6vw;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        align-items: flex-start;
+        padding-top: 4vw;
        }
        .img-slide-item-title {
-        width: 305px;
-        height: 84px;
-        font-family: D-DINExp-Bold, D-DINExp;
+        width: 24.48vw;
+        height: 8.75vw;
+        overflow-wrap: break-word;
+        color: rgba(0, 0, 0, 1);
+        font-size: 1.66vw;
+        font-family: D-DINExp, D-DINExp;
         font-weight: bold;
-        font-size: 20px;
-        color: #000000;
-        line-height: 28px;
-        text-shadow: 0px 2px 16px rgba(0,0,0,0.29);
         text-align: left;
-        font-style: normal;
+        line-height: 1.83vw;
        }
        .img-slide-item-text {
-        width: 305px;
-        height: 180px;
+        width: 28.65vw;
+        height: 8.75vw;
+        overflow-wrap: break-word;
+        color: rgba(0, 0, 0, 1);
+        font-size: 0.78vw;
         font-family: D-DINExp;
         font-weight: normal;
-        font-size: 14px;
-        color: #000000;
-        line-height: 16px;
-        text-shadow: 0px 2px 16px rgba(0,0,0,0.29);
         text-align: left;
-        font-style: normal;
+        line-height: 1.2vw;
        }
        .img-slide-item-box-5 {
-        background: url(../img/Mob-03-5@3x.jpg);
+        background: url('image/03-5@2x.jpg');
         background-position: center;
         background-size: cover;
         /* height: 592px; */
