--- a/css/bottom.less
+++ b/css/bottom.less
@@ -365,6 +365,7 @@
     }
     .img-slide-wrapper{
       width: 66.67vw;
+      margin-top: -8vw;
       .img-slide-item img{
         width: 305px;
         height: 200px;
@@ -490,6 +491,7 @@
     }
     .text_28 {
       width: auto;
+      color: #000;
     }
   }
   .box_26 {
