--- a/index.css
+++ b/index.css
@@ -460,7 +460,7 @@
 }
 
 .group_95 {
-  background-image: url(https://lanhu-dds-backend.oss-cn-beijing.aliyuncs.com/merge_image/imgs/9f18c12f38db4f308c657ae979acb916_mergeImage.png);
+  background-image: url('image/02-1@2x.jpg');
   width: 88.55vw;
   height: 46.88vw;
   background-repeat: no-repeat;
