feat: 相册调整，滚动调整

--- a/common.css
+++ b/common.css
@@ -159,6 +159,7 @@ button:active {
   height: 100%;
   padding: 5% 0;
   box-sizing: border-box;
+  flex-direction: column;
 }
 .video-box {
   /* height: 60vh */
