--- a/css/bottom.less
+++ b/css/bottom.less
@@ -365,7 +365,7 @@
     }
     .img-slide-wrapper{
       width: 66.67vw;
-      margin-top: -8vw;
+      margin-top: -6vw;
       .img-slide-item img{
         width: 305px;
         height: 200px;
@@ -388,6 +388,9 @@
         justify-content: space-around;
         align-items: flex-start;
         padding-top: 4vw;
+        video {
+          width: 58vw;
+        }
        }
        .img-slide-item-title {
         width: 24.48vw;
@@ -412,10 +415,10 @@
         line-height: 1.2vw;
        }
        .img-slide-item-box-5 {
-        background: url('image/03-5@2x.jpg');
+        background: url('../image/03-5@2x.jpg');
         background-position: center;
         background-size: cover;
-        /* height: 592px; */
+        // height: 43vw;
        }
        .img-slide-item-box-5-title {
         width: 295px;
@@ -472,7 +475,7 @@
     .text_22 {
       width: 32.29vw;
       height: 4.43vw;
-      font-family: D-DINCondensed, D-DINCondensed;
+      font-family: D-DINCondensed-Bold;
       font-size: 5.21vw;
       color: transparent;
       line-height: 4.43vw;
