--- a/css/bottom.css
+++ b/css/bottom.css
@@ -335,6 +335,7 @@
 }
 .page .pin-spacer .img-slide-wrapper {
   width: 66.67vw;
+  margin-top: -6vw;
 }
 .page .pin-spacer .img-slide-wrapper .img-slide-item img {
   width: 305px;
@@ -351,37 +352,43 @@
   box-shadow: 0px 2px 16px 0px rgba(0, 0, 0, 0.29);
   background: #fff;
   padding: 40px 20px;
-  height: 592px;
+  height: 47.71vw;
+  width: 66.6vw;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: flex-start;
+  padding-top: 4vw;
+}
+.page .pin-spacer .img-slide-wrapper .img-slide-item-box video {
+  width: 58vw;
 }
 .page .pin-spacer .img-slide-wrapper .img-slide-item-title {
-  width: 305px;
-  height: 84px;
-  font-family: D-DINExp-Bold, D-DINExp;
-  font-weight: bold;
-  font-size: 20px;
+  width: 24.48vw;
+  height: 8.75vw;
+  overflow-wrap: break-word;
   color: #000000;
-  line-height: 28px;
-  text-shadow: 0px 2px 16px rgba(0, 0, 0, 0.29);
+  font-size: 1.66vw;
+  font-family: D-DINExp, D-DINExp;
+  font-weight: bold;
   text-align: left;
-  font-style: normal;
+  line-height: 1.83vw;
 }
 .page .pin-spacer .img-slide-wrapper .img-slide-item-text {
-  width: 305px;
-  height: 180px;
+  width: 28.65vw;
+  height: 8.75vw;
+  overflow-wrap: break-word;
+  color: #000000;
+  font-size: 0.78vw;
   font-family: D-DINExp;
   font-weight: normal;
-  font-size: 14px;
-  color: #000000;
-  line-height: 16px;
-  text-shadow: 0px 2px 16px rgba(0, 0, 0, 0.29);
   text-align: left;
-  font-style: normal;
+  line-height: 1.2vw;
 }
 .page .pin-spacer .img-slide-wrapper .img-slide-item-box-5 {
-  background: url(../img/Mob-03-5@3x.jpg);
+  background: url('../image/03-5@2x.jpg');
   background-position: center;
   background-size: cover;
-  /* height: 592px; */
 }
 .page .pin-spacer .img-slide-wrapper .img-slide-item-box-5-title {
   width: 295px;
@@ -434,7 +441,7 @@
 .page .block_49 .text_22 {
   width: 32.29vw;
   height: 4.43vw;
-  font-family: D-DINCondensed, D-DINCondensed;
+  font-family: D-DINCondensed-Bold;
   font-size: 5.21vw;
   color: transparent;
   line-height: 4.43vw;
@@ -453,6 +460,7 @@
 }
 .page .block_49 .text_28 {
   width: auto;
+  color: #000;
 }
 .page .box_26 .text-wrapper_31 {
   width: 52vw;
