--- a/common.css
+++ b/common.css
@@ -85,6 +85,23 @@ button:active {
   font-weight: normal; /* 字体粗细 */
   font-style: normal; /* 字体样式 */
 }
+@font-face {
+  font-family: 'D-DINExp-Bold';
+  src: url('font/D-DIN-Condensed-Bold/D-DINExp-Bold.woff2') format('woff2'),
+       url('font/D-DIN-Condensed-Bold/D-DINExp-Bold.woff') format('woff'),
+       url('font/D-DIN-Condensed-Bold/D-DINExp-Bold.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'D-DINExp';
+  src: url('font/D-DIN-Condensed-Bold/D-DINExp.woff2') format('woff2'),
+       url('font/D-DIN-Condensed-Bold/D-DINExp.woff') format('woff'),
+       url('font/D-DIN-Condensed-Bold/D-DINExp.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
 
 .pure-menu-box {
   position: absolute;
